syntax = "proto3";

package server.v1;

option go_package = "git.mylogic.dev/homelab/go-arcs/api/gen/proto/go/server/v1;serverv1";

// ListConfigRequest is a request message to get the current configuration mappings for the given attributes.
message ListConfigRequest {
    // (required) Attributes are key=value pairs that are used to determine which configurations
    // and sources to include in the response.
    map<string, string> local_attributes = 1;
}

// GetConfigResponse is a response message that contains
// a Configuration mapping (source, attributes)
message GetConfigResponse {
    // source defines where a config is loaded from
    string source = 1;
    // Attributes are a key=value used to determined when a config should be used
    map<string, string> local_attributes = 2;
}

// ConfigManager is used to get, add and remove config mapping for the collectors to fetch
service ConfigManager {
    rpc ListConfigs(ListConfigRequest) returns (GetConfigResponse) {
        option idempotency_level = NO_SIDE_EFFECTS;
    }
}
